--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,35 @@ span.icon-bar {
     color: #009688;
     margin-top: 30px;
 }
+
+.modal-content {
+    color: #009688;
+}
+
+.cc-below {
+    margin-bottom: 60px;
+    color: #FCAB10;
+}
+
+.cc-image {
+    float: right;
+}
+
+.cc-par {
+    font-size: 20px;
+}
+
+.modal-dialog {
+    width: 1000px;
+}
+
+.affix {
+    top: 0;
+    width: 100%;
+    z-index: 9999 !important;
+}
+
+.affix ~ .container-fluid {
+    position: relative;
+    top: 50px;
+}
